--- a/auth-streaming-server/package.json
+++ b/auth-streaming-server/package.json
@@ -11,11 +11,15 @@
     "express": "^4.19.2",
     "socket.io": "^4.7.5",
     "cors": "^2.8.5",
+    "body-parser": "^2.0.1",
+    "express-session": "^1.18.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "typescript": "^5.4.2",
-    "ts-node": "^10.9.2"
-  },
-  "type": "module"
+    "ts-node": "^10.9.2",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/cors": "^2.8.17"
+  }
 }
