--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,15 @@
     "dev": "vite",
     "build": "vite build && tsc -p tsconfig.electron.json",
     "electron": "electron .",
-    "start": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\""
+    "start": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
+    "build:electron": "tsc -p tsconfig.electron.json"
   },
   "dependencies": {
     "electron": "^28.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "mediasoup-client": "^3.6.69",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
@@ -22,6 +25,9 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "concurrently": "^8.2.0",
-    "wait-on": "^7.0.1"
+    "wait-on": "^7.0.1",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   }
 }
