--- a/mediasoup-server/package.json
+++ b/mediasoup-server/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "ws": "^8.16.0",
+    "socket.io": "^4.7.5",
     "mediasoup": "^3.11.15",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "typescript": "^5.4.2",
-    "ts-node": "^10.9.2"
-  },
-  "type": "module"
+    "ts-node": "^10.9.2",
+    "@types/express": "^4.17.21"
+  }
 }
