--- a/sender/tsconfig.json
+++ b/sender/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
     "target": "ES2020",
+    "module": "ESNext",
     "moduleResolution": "node",
+    "outDir": "./dist",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "outDir": "dist"
+    "skipLibCheck": true
   },
-  "include": ["*.ts"]
+  "include": ["./*.ts", "./capture/*.ts"],
+  "ts-node": {
+    "esm": true
+  }
 }
