--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "electron": "^28.2.3",
+    "mediasoup-client": "^3.6.69",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "mediasoup-client": "^3.6.69",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
@@ -22,12 +22,13 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.0",
-    "concurrently": "^8.2.0",
-    "wait-on": "^7.0.1",
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
-  }
+    "concurrently": "^8.2.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.4.19",
+    "wait-on": "^7.0.1"
+  },
+  "type": "module"
 }
