--- a/receiver/package.json
+++ b/receiver/package.json
@@ -8,7 +8,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@koush/wrtc": "^0.4.7",
+    "wrtc": "^0.4.7",
     "socket.io-client": "^4.7.5",
     "mediasoup-client": "^3.6.69"
   },
