--- a/auth-streaming-server/package.json
+++ b/auth-streaming-server/package.json
@@ -4,21 +4,22 @@
   "description": "Server for authentication, signaling, and session control",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "node dist/index.js",
+    "dev": "ts-node index.ts",
     "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "socket.io": "^4.7.5",
-    "cors": "^2.8.5",
     "body-parser": "^2.0.1",
-    "express-session": "^1.18.0"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "typescript": "^5.4.2",
-    "ts-node": "^10.9.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/cors": "^2.8.17"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
