--- a/mediasoup-server/package.json
+++ b/mediasoup-server/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0",
   "description": "Mediasoup-based SFU server with WebSocket signaling",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "node ./dist/index.js",
     "build": "tsc"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "socket.io": "^4.7.5",
     "mediasoup": "^3.11.15",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.2",
+    "@types/express": "^4.17.21",
     "ts-node": "^10.9.2",
-    "@types/express": "^4.17.21"
+    "typescript": "^5.4.2"
   }
 }
