--- a/auth-streaming-server/package.json
+++ b/auth-streaming-server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "prom-client": "^15.1.3",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
