--- a/mediasoup-server/package.json
+++ b/mediasoup-server/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "ioredis": "^5.6.1",
     "mediasoup": "^3.11.15",
+    "prom-client": "^15.1.3",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   },
