--- a/mediasoup-server/Dockerfile
+++ b/mediasoup-server/Dockerfile
@@ -2,10 +2,11 @@
 FROM node:20-alpine
 
 # Install Python3, pip, and build tools (required for mediasoup postinstall)
-RUN apk add --no-cache python3 py3-pip build-base
+RUN apk add --no-cache python3 py3-pip build-base linux-headers
 
 WORKDIR /app
 COPY package*.json ./
-RUN npm install --production
+RUN npm install
 COPY . .
-CMD ["node", "index.js"]
+RUN npm run build && npm prune --production
+CMD ["node", "dist/index.js"]
