--- a/auth-streaming-server/Dockerfile
+++ b/auth-streaming-server/Dockerfile
@@ -1,7 +1,8 @@
 # Dockerfile for auth-streaming-server
 FROM node:18-alpine
 WORKDIR /app
-COPY package*.json ./
-RUN npm install --production
+COPY package*.json tsconfig.json ./
+RUN npm install
 COPY . .
-CMD ["node", "index.js"]
+RUN npm run build && npm prune --production
+CMD ["node", "dist/index.js"]
