--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -11,27 +11,53 @@ http {
     server {
         listen 80;
 
-        # Route / to client
+        
+    # Add resolver directive to help with DNS resolution
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 10s;
+    
+    server {
+        listen 80;
+        
+        # SSL configuration
+        proxy_ssl_protocols TLSv1.2 TLSv1.3;
+        proxy_ssl_verify off;  # For testing
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_ssl_session_reuse on;
+        proxy_ssl_session_timeout 1h;
+        
+        # Error handling
+        error_page 497 https://$host$request_uri;
+
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src *;" always;
+
+        # Route / to client (Azure)
         location / {
-            proxy_pass http://client:5173;
+            proxy_pass https://client.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Route /api to auth-streaming-server
+        # Route /api to auth-streaming-server (Azure)
         location /api/ {
-            proxy_pass http://auth-streaming-server:80;
+            proxy_pass https://auth-streaming-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Route /mediasoup to mediasoup-server
+        # Route /mediasoup to mediasoup-server (Azure)
         location /mediasoup/ {
-            proxy_pass http://mediasoup-server:80;
+            proxy_pass https://mediasoup-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
