--- a/auth-streaming-server/package.json
+++ b/auth-streaming-server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "pino": "^9.7.0",
     "prom-client": "^15.1.3",
     "socket.io": "^4.7.5"
   },
@@ -21,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/pino": "^7.0.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
