--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "cd client && npm run build"
   },
   "devDependencies": {
+    "@types/pino": "^7.0.4",
     "concurrently": "^8.2.0"
   },
   "dependencies": {
