--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -20,6 +20,16 @@ http {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src *;" always;
 
+        # Enable SSL verification for backend (production safe)
+        proxy_ssl_protocols TLSv1.2 TLSv1.3;
+        proxy_ssl_verify on;
+        proxy_ssl_server_name on;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_ssl_session_reuse on;
+        proxy_ssl_session_timeout 1h;
+
         # Route / to client (Azure)
         location / {
             proxy_pass https://client.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io;
