--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -14,6 +14,9 @@ http {
         resolver 8.8.8.8 8.8.4.4 valid=300s;
         resolver_timeout 10s;
 
+        # Trust system CA certificates for backend SSL verification
+        proxy_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
+
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
