--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -58,5 +58,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        # Route /socket.io to mediasoup-server (for WebSocket/Socket.IO)
+        location /socket.io/ {
+            proxy_pass https://mediasoup-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
     }
 }
