--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "dist/electron/main.js",
   "scripts": {
     "dev": "npx vite",
-    "build": "vite build && tsc -p tsconfig.electron.json",
+    "build": "npx vite build && npx tsc -p tsconfig.electron.json",
     "electron": "electron .",
     "start": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
     "build:electron": "tsc -p tsconfig.electron.json"
