--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -1,12 +1,24 @@
 worker_processes 1;
 
-events { worker_connections 1024; }
+# Increase worker connections for streaming
+events {
+    worker_connections 4096;
+    multi_accept on;
+    use epoll;
+}
 
 http {
     include       mime.types;
     default_type  application/octet-stream;
     sendfile        on;
     keepalive_timeout  65;
+    client_max_body_size 100M;
+    
+    # Enable WebSocket proxying
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
 
     server {
         listen 80;
@@ -28,8 +40,8 @@ http {
         proxy_ssl_verify on;
         proxy_ssl_server_name on;
         proxy_connect_timeout 60s;
-        proxy_read_timeout 60s;
-        proxy_send_timeout 60s;
+        proxy_read_timeout 3600s;  # Increase timeout for streaming
+        proxy_send_timeout 3600s;
         proxy_ssl_session_reuse on;
 
         # Route / to client (Azure)
@@ -39,6 +51,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
         }
 
         # Route /api to auth-streaming-server (Azure)
@@ -48,6 +63,34 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+        }
+
+        # Route /media to mediasoup-server (Azure)
+        location /media/ {
+            proxy_pass https://mediasoup-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_buffering off;
+            proxy_request_buffering off;
+            chunked_transfer_encoding off;
+            
+            # Additional streaming optimizations
+            proxy_max_temp_file_size 0;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
         }
 
         # Route /mediasoup to mediasoup-server (Azure)
