--- a/mediasoup-server/package.json
+++ b/mediasoup-server/package.json
@@ -9,11 +9,13 @@
     "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "ioredis": "^5.6.1",
-    "mediasoup": "^3.11.15",
+    "mediasoup": "^3.16.0",
+    "pino": "^9.7.0",
     "prom-client": "^15.1.3",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.8.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
