--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -68,6 +68,22 @@ http {
             proxy_set_header Connection $connection_upgrade;
             proxy_read_timeout 3600s;
             proxy_send_timeout 3600s;
+            proxy_buffering off;
+        }
+
+        # Route WebSocket connections to auth-streaming-server
+        location /socket.io/ {
+            proxy_pass https://auth-streaming-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_buffering off;
         }
 
         # Route /media to mediasoup-server (Azure)
