--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -73,7 +73,7 @@ http {
 
         # Route WebSocket connections to auth-streaming-server
         location /socket.io/ {
-            proxy_pass https://auth-streaming-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io;
+            proxy_pass https://auth-streaming-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io/socket.io/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -84,6 +84,10 @@ http {
             proxy_read_timeout 3600s;
             proxy_send_timeout 3600s;
             proxy_buffering off;
+            proxy_max_temp_file_size 0;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
         }
 
         # Route /media to mediasoup-server (Azure)
