--- a/render.yaml
+++ b/render.yaml
@@ -22,6 +22,10 @@ services:
     buildCommand: npm install && npm run build
     startCommand: npm run start
     envVars:
+      - key: VITE_API_URL
+        value: "https://auth-streaming-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io/api"
+      - key: VITE_SIGNALING_URL
+        value: "https://auth-streaming-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io"
       - key: REACT_APP_AUTH_SERVER_URL
         value: "https://auth-streaming-server.victoriouswater-bf2045fa.centralindia.azurecontainerapps.io"
       - key: REACT_APP_MEDIA_SERVER_URL
