--- a/nginx-gateway/nginx.conf
+++ b/nginx-gateway/nginx.conf
@@ -88,6 +88,10 @@ http {
             proxy_buffer_size 128k;
             proxy_buffers 4 256k;
             proxy_busy_buffers_size 256k;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
         }
 
         # Route /media to mediasoup-server (Azure)
