--- a/auth-streaming-server/package.json
+++ b/auth-streaming-server/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/pino": "^7.0.4",
+    "@types/node": "^20.5.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
