--- a/auth-streaming-server/package.json
+++ b/auth-streaming-server/package.json
@@ -5,9 +5,10 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node --loader ts-node/esm dist/index.js",
     "dev": "node --loader ts-node/esm index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "build:prod": "tsc && npm prune --production"
   },
   "dependencies": {
     "body-parser": "^2.0.1",
@@ -16,14 +17,16 @@
     "express-session": "^1.18.0",
     "pino": "^9.7.0",
     "prom-client": "^15.1.3",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "@types/node": "^20.5.9"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
+    "@types/express-session": "^1.17.7",
     "@types/pino": "^7.0.4",
     "@types/node": "^20.5.9",
+    "@types/socket.io": "^4.17.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
