--- a/auth-streaming-server/package.json
+++ b/auth-streaming-server/package.json
@@ -17,20 +17,18 @@
     "express-session": "^1.18.0",
     "pino": "^9.7.0",
     "prom-client": "^15.1.3",
-    "socket.io": "^4.7.5",
-    "@types/node": "^20.5.9"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.7",
     "@types/pino": "^7.0.4",
-    "@types/node": "^20.5.9",
     "@types/socket.io": "^4.17.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.16.0"
   }
 }
